# treescape

./: .env.dist  .gitattributes  .gitignore  README.md  ci.sh  forest_design.qgs  pyproject.toml  pyrightconfig.json  species_list.txt
fixtures/: plant_species.json.bz2
forest_designs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
forest_designs/migrations/: 0001_initial.py  0002_alter_plant_options_plant_variety_alter_plant_genus_and_more.py  0002_initial_data.py  0002_remove_plant_state.py  0003_alter_plant_id_alter_plantimage_id_and_more.py  0003_plant_states.py  0003_plant_uuid_plantimage_uuid_plantimagekind_uuid_and_more.py  0003_plantstate_remove_plant_notes_alter_plantlog_date_and_more.py  0003_remove_plant_notes.py  0003_remove_plant_project_delete_project.py  0004_alter_plantimage_plant.py  0004_plant_states.py  0004_plantimagekind_plantlogkind_plant_notes_plantimage_and_more.py  0004_uuid_step_1.py  0005_alter_plant_genus_alter_plantimage_image.py  0005_uuid_step_2.py  0005_zonekind_zone.py  0006_plantimagekind_description_plantlogkind_description_and_more.py  0007_kind_initial_data.py  0008_alter_plantimage_date_alter_plantlog_date.py
forest_designs/models/: __init__.py  base.py  image.py  log.py  plant.py  state.py  zone.py
forest_designs/tests/: test_models.py  test_serializers.py  test_views.py
plant_species/: admin.py  apps.py  exceptions.py  models.py  tests.py
qgis_project/: customize_ui.py  forest_design.qgs  interface_customization.ini
scripts/: ci.sh  export_species_data.sh  make_plantdata_archive.sh
species/: admin.py  apps.py  models.py
species_data/: admin.py  apps.py  fields.py  models.py  serializers.py  tests.py  urls.py  views.py
treescape/: asgi.py  models.py  settings.py  urls.py  wsgi.py
(+68 files in other folders)
