[tool.poetry]
name = "treescape"
version = "0.1.0"
description = ""
authors = ["Mathijs de Bruin <mathijs@mathijsfietst.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Django = "^5.0.3"
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"
pygbif = "^0.6.4"
pycountry = "^23.12.11"
tqdm = "^4.66.2"
wikipedia = "^1.4.0"
django-composite-field = {git = "https://github.com/treescape-io/django-composite-field.git", rev = "main", develop = true}
langchain-openai = "^0.2.14"
langchain = "^0.3.13"
djangorestframework = "^3.15.1"
django-filter = "^24.2"
markdown = "^3.6"
gunicorn = "^22.0.0"
django-environ = "^0.11.2"
drf-redesign = "^0.3.9"
aider = "^0.2.4"
django-storages = {extras = ["s3"], version = "^1.14.4"}
pyvips = {extras = ["binary"], version = "^2.2.3"}
langchain-community = "^0.3.13"
pyyaml = "^6.0.2"
uritemplate = "^4.1.1"
inflection = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.363"
django-types = "^0.19.1"
ruff = "^0.3.4"
ipdb = "^0.13.13"
prettyprinter = "^0.18.0"
aider-chat = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
